# eds-to-idevice

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure.ac~  eds-to-idevice  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
lib/: TODO  eti-contact-plist-builder.c  eti-contact-plist-builder.h  eti-contact-plist-parser.c  eti-contact-plist-parser.h  eti-contact.c  eti-contact.h  eti-plist.c  eti-plist.h  eti-sync.c  eti-sync.h
src/: econtact.c  eti-eds.c  eti-eds.h  main.c
